syntax = "proto3";
option csharp_namespace = "SimpleSchedulerBlazor.ProtocolBuffers.Messages";
package SimpleSchedulerBlazorProtocolBuffers;

import "google/protobuf/timestamp.proto";
import "types.proto";

message WorkerMessage {
    sint64 ID = 1;
    bool IsActive = 2;
    string WorkerName = 3;
    string DetailedDescription = 4;
    string EmailOnSuccess = 5;
    NullableInt64 ParentWorkerID = 6;
    sint32 TimeoutMinutes = 7;
    string DirectoryName = 8;
    string Executable = 9;
    string ArgumentValues = 10;
}
